[package]
name = "tvmm"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/jmspiewak/tvmm"
categories = ["command-line-utilities"]
license = "MPL-2.0"
license-file = "LICENSE.txt"
edition = "2021"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = ["maplit", "term_size", "crossterm-backend"] }
gag = "1.0.0"
rusty_pool = { version = "0.7.0", default-features = false }
virt = { path = "libvirt-rust" }
